--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: EDK2 Build
 
 on:
   push:
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4.1.5
     - name: CI Build
       run: chmod +x ci-build.sh && ./ci-build.sh
 
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4.3.3
       with:
         name: Galaxy S20
         path: ./workspace/boot.*
